--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     </head>
     <body>
         <div id="displayHolder" class="centerChildrenHorizontally">
-            <canvas id="display" width="800" height="450"></canvas>
-            <script src="main.js"></script>
+            <div>
+                <canvas id="display" width="800" height="450"></canvas>
+                <div class="centerChildrenHorizontally">
+                    <h3 id="logger">Console:</h3>
+                </div>
+            </div>
         </div>
+        <script src="main.js"></script>
     </body>
 </html>
