--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="GenerationTag">
+            <h1>Generation: 1</h1>
+        </div>
         <div id="displayHolder" class="centerChildrenHorizontally">
             <div>
                 <canvas id="display" width="800" height="450"></canvas>
